<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/recipe_step_media"
    >

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/stepPlayerView"
        android:layout_width="match_parent"
        android:layout_height="220dp"
       />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:id="@+id/stepImageView"
        android:visibility="gone"
        />

</LinearLayout>