<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="5dp"
    android:padding="12dp"
    > <!-- android:background="@color/background" -->

    <include layout="@layout/recipe_detail_content"
        android:id="@+id/recipe_detail_base_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="center_horizontal"
        >
          <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="prev"
                android:id="@+id/prevBtn"

              />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="next"
                android:id="@+id/nextBtn"/>
    </LinearLayout>

</LinearLayout>