<resources>
    <string name="app_name">NanoBaking</string>
    <string name="title_recipe_detail">Recipe Detail</string>
    <string name="detail_ingredients_button">Gather your Ingredients!</string>
</resources>
